[package]
name = "paxos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = "0.6.4"
clap = { version = "4.1.4", features = ["derive"] }
hyper = { version = "0.14.24", features = ["full"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
